[package]
name = "blockchain"
version = "0.1.0"
authors = ["Alexander Lenhardt <alexander.lenhardt@soundcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding="*"
sha2 = "0.9.1"
hex-literal = "*"
rand = "0.7.3"
arrayvec = "*"
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }